--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "Set roles given emoji reactions on a discord message",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "npx nodemon index.js"
@@ -10,8 +11,8 @@
   "author": "latentfreedom",
   "license": "ISC",
   "dependencies": {
-    "discord.js": "^13.3.1",
-    "dotenv": "^10.0.0"
+    "discord.js": "^14.7.1",
+    "dotenv": "^16.0.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
